# ranim

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ciallo.toml  cliff.toml  flake.nix  justfile  mdbook-katex.nix  mdbook.nix  pyproject.toml  wasm-bindgen-cli.nix
.cargo/: config.toml
.claude/: settings.local.json
.github/book-assets/: version-select.css  version-select.js
.github/workflows/: book.yml  build-book.yml  build.yml  website.yml
benches/: .gitignore  Cargo.toml
benches/benches/: bench1.rs  extract.rs  gpu_render.rs  items.rs  mesh_discard.rs  render.rs
benches/benches/wgpu_benchmark/: README.md  renderpass-bindless.wgsl  renderpass.rs  renderpass.wgsl  root.rs
benches/src/: lib.rs
book/: book.toml
book/src/: SUMMARY.md  cli.md  custom-item.md  getting_started.md  packages.md
book/src/understand/: animation.md
book/theme/: index.hbs
example-packages/app/: Cargo.toml  README.md  index.html  manual.html
example-packages/app/src/: lib.rs  main.rs
examples/: test_scene.rs
examples/aabb/: lib.rs
examples/animating_pi/: lib.rs
examples/arc/: README.md  lib.rs  main.rs
examples/arc_between_points/: README.md  lib.rs  main.rs
examples/basic/: README.md  lib.rs  main.rs
examples/bubble_sort/: lib.rs  main.rs
examples/bubble_sort_massive/: README.md  main.rs
examples/ellipse/: lib.rs
examples/extract_vitem_visualize/: lib.rs  main.rs
examples/geometry_blueprints/: main.rs
examples/getting_started0/: lib.rs  main.rs
examples/getting_started1/: lib.rs  main.rs
examples/getting_started2/: lib.rs  main.rs
examples/getting_started_0/: main.rs
examples/getting_started_1/: main.rs
examples/getting_started_2/: main.rs
examples/getting_started_3/: main.rs
examples/hanoi/: lib.rs  main.rs
examples/hello_ranim/: lib.rs  main.rs
examples/many_mobjects/: main.rs
examples/mesh_morph/: lib.rs
examples/output_formats/: lib.rs
examples/palettes/: README.md  lib.rs  main.rs
examples/perlin_terrain/: lib.rs
examples/perspective_blend/: lib.rs  main.rs
examples/py/: main.py
examples/py_cli/: main.py
examples/ranim_logo/: lib.rs  main.rs
examples/regular_polygon/: lib.rs
examples/selective_sort/: lib.rs  main.rs
examples/selective_sort_massive/: README.md  main.rs
examples/solar_system/: lib.rs
examples/test/: lib.rs  main.rs
examples/test_scene/: main.rs
examples/tetrahedron_spheres/: lib.rs
examples/text_item/: lib.rs
examples/thesis/: main.rs
lab/ranim-bevy/: Cargo.toml
lab/ranim-bevy/examples/: animated_fox_halo.rs  bubble_sort.rs  delayed_commands.rs  hanoi.rs  selective_sort.rs  vitem_depth_oit.rs  vitem_morph.rs
lab/ranim-bevy/examples/common/: fox_halo.rs  mod.rs  timeline.rs
lab/ranim-bevy/src/: component.rs  lib.rs  plugin.rs  shader.rs  utils.rs  video.rs
lab/ranim-bevy/src/render/: commands.rs  gpu.rs  item.rs  mod.rs  pipeline.rs  systems.rs  utils.rs
lab/ranim-lab/: Cargo.toml
lab/ranim-lab/src/: lib.rs  main.rs
lab/ranim-lab/src/app/: mod.rs
lab/ranim-slide/: Cargo.toml
lab/ranim-slide/src/: app.rs  main.rs  model.rs  object.rs
notes/: README.md
playground/: test.py
ranim-py/: Cargo.toml  pyproject.toml
ranim-py/examples/: test.py
ranim-py/ranim/: __init__.py
ranim-py/ranim_bindings/: __init__.py  ranim_bindings.pyi
ranim-py/src/: lib.rs
shader/: simple.wgsl  vmobject_compute.wgsl  vmobject_depth.wgsl  vmobject_fill.wgsl  vmobject_stroke.wgsl  vpath_fill.wgsl  vpath_stroke.wgsl
src/: animation.rs  camera.rs  context.rs  eval.rs  file_writer.rs  interpolate.rs  lib.rs  link_magic.rs  main.rs  pipeline.rs  rabject.rs  render_adapter.rs  scene.rs  timeline.rs  traits.rs  updater.rs  utils.rs
src/animation/: blank.rs  composition.rs  creation.rs  entity.rs  fading.rs  freeze.rs  func.rs  interpolate.rs  lagged.rs  mod.rs  timeline.rs  transform.rs  wait.rs  write.rs
src/animation/entity/: composition.rs  creation.rs  fading.rs  freeze.rs  interpolate.rs  mod.rs
src/app/: egui_tools.rs  mod.rs  timeline.rs
src/blueprint/: mod.rs  vmobject.rs
src/canvas/: camera.rs  mod.rs  pipeline.rs
src/canvas/shader/: canvas.wgsl
src/cmd/: mod.rs  preview.rs  render.rs
src/color/: mod.rs  palettes.rs
src/components/: mod.rs  nvpoint.rs  point.rs  rgba.rs  vpoint.rs  width.rs
src/items/: camera_frame.rs  group.rs  mod.rs  nvitem.rs  svg_item.rs  vitem.rs
src/mobject/: geometry.rs  mod.rs
src/pipeline/: mod.rs  simple.rs  vmobject_fill.rs
src/rabject/: entity.rs  group.rs  mod.rs  svg_mobject.rs  vgroup.rs  vmobject.rs
src/render/: app.rs  mod.rs  primitives.rs  utils.rs
src/renderer/: mod.rs  vmobject.rs
src/scene/: entity.rs  file_writer.rs  mod.rs  store.rs
src/utils/: bezier.rs  brush.rs  math.rs  mod.rs  rate_functions.rs  refresh.rs  svg.rs  typst.rs  wgpu.rs
src/vello/: mod.rs
src/world/: entity.rs  mod.rs  store.rs
website/: .gitignore  config.toml
website/content/: _index.md  architecture.md  hello.md
website/data/: aabb.toml  animating_pi.toml  arc.toml  arc_between_points.toml  basic.toml  bubble_sort.toml  bubble_sort_massive.toml  ellipse.toml  extract_vitem_visualize.toml  getting_started0.toml  getting_started1.toml  getting_started2.toml  getting_started3.toml  getting_started_0.toml  getting_started_1.toml  getting_started_2.toml  getting_started_3.toml  hanoi.toml  hello_ranim.toml  mesh_morph.toml  output_formats.toml  palettes.toml  perlin_terrain.toml  perspective_blend.toml  ranim_logo.toml  regular_polygon.toml  selective_sort.toml  selective_sort_massive.toml  solar_system.toml  test.toml  test_scene.toml  tetrahedron_spheres.toml  text_item.toml
website/sass/: _vars.scss  index.scss
website/static/: github-markdown.css
website/templates/: 404.html  anchor-link.html  doc.html  examples-page.html  examples.html  index.html  page.html  section.html
xtasks/xtask-build-examples/: Cargo.toml
xtasks/xtask-build-examples/src/: lib.rs  main.rs
xtasks/xtask-examples/: Cargo.toml  README.md
xtasks/xtask-examples/src/: lib.rs  main.rs
(+161 files in other folders)
