[package]
name = "ranim"
description = "An animation engine inspired by manim and JAnim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://azurice.github.io/ranim"
readme = "README.md"
keywords = ["animation", "manim", "wgpu"]
exclude = ["website", "assets", "book"]

[lib]
crate-type = ["rlib", "dylib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["benches", "example-packages/*", "packages/*", "xtasks/*"]

[workspace.package]
version = "0.1.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/AzurIce/ranim"

[workspace.dependencies]
ranim = { path = ".", version = "0.1.4" }
ranim-core = { path = "packages/ranim-core", version = "0.1.4" }
ranim-items = { path = "packages/ranim-items", version = "0.1.4" }
ranim-anims = { path = "packages/ranim-anims", version = "0.1.4" }
ranim-macros = { path = "packages/ranim-macros", version = "0.1.4" }
glam = "0.30.5"
log = "0.4.28"
itertools = "0.14"
bytemuck = "1.23.2"

[features]
# default = ["output"]
profiling = [
  "dep:wgpu-profiler",
  "dep:puffin",
  "dep:puffin_http",
  "dep:profiling",
]
# output = ["dep:async-channel"]
app = ["dep:egui", "dep:egui-wgpu", "dep:egui-winit", "dep:winit", "render"]
render = []
serde = ["dep:serde", "glam/serde"]

[dependencies]
ranim-core.workspace = true
ranim-items.workspace = true
ranim-anims.workspace = true
ranim-macros.workspace = true
itertools.workspace = true
web-time = "1.1.0"
sha1 = "0.10.6"
lru = "0.16.1"
async-channel = "2.5.0"
bytemuck = { workspace = true, features = ["derive"] }
glam = { workspace = true, features = ["bytemuck"] }
log.workspace = true
image = "0.25.8"
pollster = "0.4.0"
wgpu = "25.0.2"
anyhow = "1.0.99"
usvg = "0.45.1"
regex = "1.11.2"
variadics_please = "1.1.0"
derive_more = { version = "2.0.1", features = [
  "deref_mut",
  "deref",
  "index",
  "index_mut",
  "is_variant",
  "as_ref",
  "from",
  "into_iterator",
] }

indicatif = { version = "0.18.0", optional = true }
puffin = { version = "0.19.1", optional = true }
puffin_http = { version = "0.16.1", optional = true }
wgpu-profiler = { version = "0.23.0", optional = true, features = ["puffin"] }
profiling = { version = "1.0.17", optional = true, features = [
  "profile-with-puffin",
] }

egui = { version = "0.32.3", optional = true }
winit = { version = "0.30.12", optional = true }
egui-wgpu = { version = "0.32.3", optional = true }

serde = { version = "1.0.225", features = ["derive"], optional = true }
typst = "0.13.1"
typst-kit = { version = "0.13.1", default-features = false, features = [
  "fonts",
  "embed-fonts",
] }
# time = "0.3.41"
typst-svg = "0.13.1"
chrono = "0.4.42"
slotmap = "1.0.7"
inventory = "0.3.21"
diff-match-patch-rs = "0.5.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
egui-winit = { version = "0.32.3", optional = true }
which = "8.0.0"
flate2 = "1.1.2"
reqwest = { version = "0.12.23", features = ["blocking"] }
# linkme = "0.3.33"

# web:
[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.102"
wasm-bindgen-futures = { version = "0.4.52" }
web-sys = { version = "0.3.79" }
console_error_panic_hook = { version = "0.1.7" }
console_log = { version = "1.0.0" }
egui-winit = { version = "0.32.3", default-features = false, optional = true }
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
pretty_env_logger = "0.5.0"

[dev-dependencies]
assert_float_eq = "1.1.4"
rand = "0.9.2"
rand_chacha = "0.9.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[package.metadata.release]
pre-release-hook = [
  "git",
  "cliff",
  "-o",
  "CHANGELOG.md",
  "--tag",
  "{{version}}",
]
pre-release-replacements = [
  { file = "README.md", search = "ranim = \"[^\"]+\"", replace = "{{crate_name}} = \"{{version}}\"" },
]

# MARK: Examples
[[example]]
name = "arc"
path = "examples/arc/lib.rs"
crate-type = ["cdylib"]

[package.metadata.example.arc]
wasm = true

[[example]]
name = "arc_between_points"
path = "examples/arc_between_points/lib.rs"
crate-type = ["cdylib"]

[package.metadata.example.arc_between_points]
wasm = true

[[example]]
name = "basic"
path = "examples/basic/lib.rs"
crate-type = ["cdylib"]

[package.metadata.example.basic]
wasm = true

[[example]]
name = "hanoi"
path = "examples/hanoi/lib.rs"
crate-type = ["cdylib"]

[package.metadata.example.hanoi]
wasm = true

[[example]]
name = "hello_ranim"
path = "examples/hello_ranim/lib.rs"
crate-type = ["cdylib"]

[package.metadata.example.hello_ranim]
wasm = true

[[example]]
name = "palettes"
path = "examples/palettes/lib.rs"
crate-type = ["cdylib"]

[[example]]
name = "perspective_blend"
path = "examples/perspective_blend/lib.rs"
crate-type = ["cdylib"]

[package.metadata.example.perspective_blend]
wasm = true

[[example]]
name = "ranim_logo"
path = "examples/ranim_logo/lib.rs"
crate-type = ["cdylib"]

[package.metadata.example.ranim_logo]
wasm = true

[[example]]
name = "extract_vitem_visualize"
path = "examples/extract_vitem_visualize/lib.rs"
crate-type = ["cdylib"]

[package.metadata.example.extract_vitem_visualize]
wasm = true

[[example]]
name = "test"
path = "examples/test/lib.rs"
crate-type = ["cdylib"]

[package.metadata.example.test]
hide = true
wasm = false

[[example]]
name = "bubble_sort"
path = "examples/bubble_sort/lib.rs"
crate-type = ["cdylib"]

[package.metadata.example.bubble_sort]
wasm = true

[[example]]
name = "getting_started0"
path = "examples/getting_started0/lib.rs"
crate-type = ["cdylib"]

[package.metadata.example.getting_started0]
wasm = true
hide = true

[[example]]
name = "getting_started1"
path = "examples/getting_started1/lib.rs"
crate-type = ["cdylib"]

[package.metadata.example.getting_started1]
wasm = true
hide = true

[[example]]
name = "getting_started2"
path = "examples/getting_started2/lib.rs"
crate-type = ["cdylib"]

[package.metadata.example.getting_started2]
wasm = true
hide = true

[[example]]
name = "selective_sort"
path = "examples/selective_sort/lib.rs"
crate-type = ["cdylib"]

[package.metadata.example.selective_sort]
wasm = true
