[package]
name = "benches"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
itertools.workspace = true
criterion = { version = "0.7.0", features = ["html_reports"] }
ranim = { path = "../" }

[[bench]]
name = "bench1"
harness = false
