[package]
name = "benches"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
bench = false

[dependencies]
itertools.workspace = true
criterion = { version = "0.7.0", features = ["html_reports"] }
ranim = { path = "../", features = ["render"] }

[[bench]]
name = "eval"
harness = false

[[bench]]
name = "render"
harness = false

[[bench]]
name = "extract"
harness = false
