[package]
name = "benches"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
bench = false

[dependencies]
itertools.workspace = true
criterion = { version = "0.8.2", features = ["html_reports"] }
ranim = { path = "../", features = ["render"] }
ranim-core = { path = "../packages/ranim-core" }
ranim-render = { path = "../packages/ranim-render" }
wgpu = { workspace = true }
pollster = "0.4.0"

[[bench]]
name = "eval"
harness = false

[[bench]]
name = "render"
harness = false

[[bench]]
name = "extract"
harness = false

[[bench]]
name = "gpu_render"
harness = false
