[package]
name = "ranim-py"
edition.workspace = true
license.workspace = true
publish = false
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ranim_bindings" # name of the .so library that the Python module will import
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
