[package]
name = "ranim-bevy"
description = "Experimental Bevy integration for Ranim."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "ranim_bevy"
path = "src/lib.rs"

[features]
video = [
  "dep:image",
  "dep:which",
  "dep:indicatif",
  "dep:tracing-indicatif",
  "dep:tracing-subscriber",
]

[[bin]]
name = "ranim-bevy-demo"
path = "src/bin/demo.rs"

[dependencies]
bevy = { version = "0.19.0", default-features = false, features = [
  "3d",
] }
ranim-core.workspace = true
ranim-render.workspace = true
tracing.workspace = true
wgpu.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
image = { workspace = true, optional = true }
which = { version = "8.0.2", optional = true }
indicatif = { version = "0.18.4", optional = true }
tracing-indicatif = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[package.metadata.release]
tag = false
