[package]
name = "xtask-build-examples"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.20"
# toml_edit = { version = "0.22.7", default-features = false, features = [
#   "parse",
# ] }
clap = { version = "4.5", features = ["derive"] }
sha1 = "0.10.6"
base16ct = { version = "0.2.0", features = ["alloc"] }
anyhow = "1.0.98"
