[package]
name = "xtask-examples"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
ranim-cli = { path = "../../packages/ranim-cli" }
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1.2"
# toml_edit = { version = "0.22.7", default-features = false, features = [
#   "parse",
# ] }
clap = { version = "4.6", features = ["derive"] }
sha1 = "0.10.6"
base16ct = { version = "0.3.0", features = ["alloc"] }
anyhow = "1.0.102"
